# aleph2_desktop

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
.ci/: python_format.sh
aleph2_gazebo/: CMakeLists.txt  README.md  gazebo_hardware_plugins.xml  package.xml
aleph2_gazebo/config/: controllers.yaml  pid_gains.yaml
aleph2_gazebo/launch/: aleph2_gazebo.launch  aleph2_gazebo.launch.py  aleph2_gazebo.launch.xml  aleph2_marsyard.launch  spawn_controllers.launch  spawn_model.launch  spawn_robot.launch  spawn_robot.launch.py  spawn_robot.launch.xml
aleph2_gazebo/src/: aleph2_gazebo_system.cpp
aleph2_gui/: CMakeLists.txt  package.xml  rqt_plugins.xml  setup.cfg  setup.py
aleph2_gui/aleph2_gui/: aleph2_drivetrain_controller.py  aleph2_manip_controller.py  joystick_selector.py
aleph2_gui/aleph2_gui/resources/: ta.py
aleph2_gui/resource/: ta.qrc
aleph2_gui/resource/ui/: aleph2_drivetrain_controller.ui  aleph2_manip_controller.ui  aleph2_power_controller.ui
aleph2_gui/resources/: resources_rc.py  ta.qss
aleph2_gui/resources/ui/: aleph2_drivetrain_controller.ui  aleph2_manip_controller.ui  aleph2_power_controller_hc_delegate.ui  aleph2_power_controller_jetson_delegate.ui  aleph2_power_controller_lc_delegate.ui  rubi_board_fields.ui  rubi_controller.ui  rubi_controller_board.ui
aleph2_gui/scripts/: aleph2_drivetrain_controller  aleph2_manip_controller
aleph2_gui/src/aleph2_drivetrain_controller/: __init__.py  main.py
aleph2_gui/src/aleph2_gui/: aleph2_drivetrain_controller.py  aleph2_manip_controller.py  aleph2_power_controller.py  joystick_selector.py
aleph2_gui/src/aleph2_gui/aleph2_drivetrain_controller/: __init__.py  main.py  steering_module.py
aleph2_gui/src/aleph2_gui/aleph2_manip_controller/: __init__.py  main.py
aleph2_gui/src/aleph2_gui/aleph2_power_controller/: __init__.py  main.py
aleph2_gui/src/aleph2_gui/joystick_selector/: main.py
aleph2_gui/src/aleph2_gui/rubi_controller/: __init__.py  main.py  rubi_board.py  rubi_interface_builder.py
aleph2_gui/src/joystick_selector/: __init__.py
aleph2_gz/: CMakeLists.txt  package.xml
aleph2_gz/launch/: aleph2_gz.launch.xml  spawn_model.launch.xml
aleph2_gz/src/: differential_system.cpp
aleph2_viz/: CMakeLists.txt  package.xml
aleph2_viz/launch/: rviz.launch  rviz.launch.py  rviz.launch.xml  view_model.launch  view_model.launch.py  view_model.launch.xml
aleph2_viz/rviz/: robot.rviz
config/: aleph2_control.yaml  controllers.yaml
input_manager/: CMakeLists.txt  README.md  package.xml
input_manager/src/: joystick.cpp  joystick.h  main.cpp  rostalker.cpp  rostalker.h
launch/: aleph2_control.launch  aleph2_gazebo.launch  aleph2_world.launch  spawn_controllers.launch  spawn_model.launch  world.launch
worlds/: aleph2.world
