<package>
  <name>aleph2_gazebo</name>
  <version>0.0.0</version>
  <description>aleph2_gazebo</description>
  
  <maintainer email="blazej@todo.todo">blazej</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
