<package format="2">
  <name>aleph2_gazebo</name>
  <version>0.0.0</version>
  <description>aleph2_gazebo</description>
  
  <maintainer email="blazej@todo.todo">blazej</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>aleph2_description</exec_depend>

  <export>
  </export>
</package>
