<?xml version="1.0"?>
<package format="3">
  <name>aleph2_gazebo</name>
  <version>0.0.0</version>
  <description>
    Launch files and other resources for simulating Aleph2 in Gazebo.
  </description>

  <maintainer email="continuum@cs.uni.wroc.pl">Continuum Rover Team</maintainer>
  <author>Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
