<?xml version="1.0"?>
<package format="2">
  <name>aleph2_viz</name>
  <version>1.0.0</version>
  <description>
    Visualization launch files and RViz configurations for Aleph2
  </description>

  <maintainer email="blazej@todo.todo">blazej</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>

  <exec_depend>aleph2_description</exec_depend>

</package>
