<?xml version="1.0"?>
<package format="3">
  <name>aleph2_viz</name>
  <version>0.0.0</version>
  <description>
    Visualization launch files and RViz configurations for Aleph2
  </description>

  <maintainer email="continuum@cs.uni.wroc.pl">Continuum Rover Team</maintainer>
  <author>Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>aleph2_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
