<?xml version="1.0"?>
<package format="2">
  <name>input_manager</name>
  <version>1.0.0</version>
  <description>The input_manager package</description>

  <maintainer email="cezar@todo.todo">cezar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>input_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <depend>sdl2</depend>

</package>
